styles: fix scrollbar style on sass

--- a/src/scss/components/_root.scss
+++ b/src/scss/components/_root.scss
@@ -1,4 +1,5 @@
 @use "../custom" as *;
+@use "../components/mixins" as *;
 
 :root {
   --max-width: 1100px;
@@ -7,12 +8,40 @@
   --background-color: $white;
   --text-color: $text-color;
   --input-bg: $white;
+  --table-column: minmax(0, 18%) minmax(0, 14%) minmax(0, 24.5%) minmax(0, 14%) minmax(0, 19%) minmax(0, 10%) minmax(0, 2.5%);
+  @include responsive(mediadown) {
+    
+  --table-column: minmax(0, 18%) minmax(0, 14%) minmax(0, 21.5%) minmax(0, 14%) minmax(0, 19%) minmax(0, 12%) minmax(0, 3.5%);
+  }
+
 }
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+
+  &::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
+  
+  &::-webkit-scrollbar-track {
+    background-color: #ececec;
+  }
+  
+  &::-webkit-scrollbar-thumb {
+    border-radius: 2px;
+    height: 6px;
+    background-color: $primary;
+    transition: all 2s ease-in-out;
+
+    &:hover,
+    &:active {
+      background-color: $secondary;
+    }
+  }
+  
 }
 
 html,
